--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <nav class="navbar">
         <div class="nav-container">
-            <div class="nav-logo">Pokedex</div>
+            <div class="nav-logo">
+                <img id="logo" src="assets/img/poke_icon-removebg-preview.png" alt="poke icon">
+                <p>POKEDEX</p>
+            </div>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="index.html" class="nav-link">Pokemons</a></li>
                 <li class="nav-item"><a href="trainers.html" class="nav-link">Entrenadores</a></li>
@@ -19,7 +22,6 @@
             </ul>
         </div>
     </nav>
-
     <main class="container">
         <section id="pokemons" class="pokemon-grid">
             <div class="pokemon-card">
