--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img id="logo" src="assets/img/poke_icon-removebg-preview.png" alt="poke icon">
+                <img id="logo" src="assets/img/poke_icon.png" alt="poke icon">
                 <p>POKEDEX</p>
             </div>
             <ul class="nav-menu">
