--- a/trainers.html
+++ b/trainers.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img id="logo" src="assets/img/poke_icon-removebg-preview.png" alt="poke icon">
+                <img id="logo" src="assets/img/poke_icon.png" alt="poke icon">
                 <p>POKEDEX</p>
             </div>
             <ul class="nav-menu">
@@ -26,7 +26,7 @@
     <main class="container">
         <section id="entrenadores" class="trainers-grid">
             <div class="trainer-card">
-                <img src="https://i.pravatar.cc/300?img=12" alt="Ash Ketchum" class="trainer-image">
+                <img src="assets/img/Ash.png" alt="Ash Ketchum" class="trainer-image">
                 <div class="trainer-info">
                     <h3 class="trainer-name">Ash Ketchum</h3>
                     <p class="trainer-region">Región: Kanto</p>
@@ -36,7 +36,7 @@
             </div>
 
             <div class="trainer-card">
-                <img src="https://i.pravatar.cc/300?img=47" alt="Misty" class="trainer-image">
+                <img src="assets/img/MistyEP.png" alt="Misty" class="trainer-image">
                 <div class="trainer-info">
                     <h3 class="trainer-name">Misty</h3>
                     <p class="trainer-region">Región: Kanto</p>
@@ -46,7 +46,7 @@
             </div>
 
             <div class="trainer-card">
-                <img src="https://i.pravatar.cc/300?img=33" alt="Brock" class="trainer-image">
+                <img src="assets/img/Brock_LGPE.png" alt="Brock" class="trainer-image">
                 <div class="trainer-info">
                     <h3 class="trainer-name">Brock</h3>
                     <p class="trainer-region">Región: Kanto</p>
@@ -56,7 +56,7 @@
             </div>
 
             <div class="trainer-card">
-                <img src="https://i.pravatar.cc/300?img=15" alt="Gary Oak" class="trainer-image">
+                <img src="assets/img/gary oak.jpg" alt="Gary Oak" class="trainer-image">
                 <div class="trainer-info">
                     <h3 class="trainer-name">Gary Oak</h3>
                     <p class="trainer-region">Región: Kanto</p>
@@ -66,7 +66,7 @@
             </div>
 
             <div class="trainer-card">
-                <img src="https://i.pravatar.cc/300?img=44" alt="May" class="trainer-image">
+                <img src="assets/img/may.jpg" alt="May" class="trainer-image">
                 <div class="trainer-info">
                     <h3 class="trainer-name">May</h3>
                     <p class="trainer-region">Región: Hoenn</p>
@@ -76,7 +76,7 @@
             </div>
 
             <div class="trainer-card">
-                <img src="https://i.pravatar.cc/300?img=48" alt="Serena" class="trainer-image">
+                <img src="assets/img/Serena.png" alt="Serena" class="trainer-image">
                 <div class="trainer-info">
                     <h3 class="trainer-name">Serena</h3>
                     <p class="trainer-region">Región: Kalos</p>
@@ -86,7 +86,7 @@
             </div>
 
             <div class="trainer-card">
-                <img src="https://i.pravatar.cc/300?img=45" alt="Cynthia" class="trainer-image">
+                <img src="assets/img/cyntia.jpg" alt="Cynthia" class="trainer-image">
                 <div class="trainer-info">
                     <h3 class="trainer-name">Cynthia</h3>
                     <p class="trainer-region">Región: Sinnoh</p>
@@ -96,7 +96,7 @@
             </div>
 
             <div class="trainer-card">
-                <img src="https://i.pravatar.cc/300?img=59" alt="Lance" class="trainer-image">
+                <img src="assets/img/lance.jpg" alt="Lance" class="trainer-image">
                 <div class="trainer-info">
                     <h3 class="trainer-name">Lance</h3>
                     <p class="trainer-region">Región: Johto</p>
@@ -106,7 +106,7 @@
             </div>
 
             <div class="trainer-card">
-                <img src="https://i.pravatar.cc/300?img=49" alt="Iris" class="trainer-image">
+                <img src="assets/img/iris.jpg" alt="Iris" class="trainer-image">
                 <div class="trainer-info">
                     <h3 class="trainer-name">Iris</h3>
                     <p class="trainer-region">Región: Teselia</p>
